--- a/travel-journal/frontend/package.json
+++ b/travel-journal/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "antd": "^5.27.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.8",
     "react": "^18.2.0",
